button color fix on iphone

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -32,6 +32,9 @@ textarea,
 button {
   font-family: inherit;
 }
+button {
+  color: inherit;
+}
 input:focus-visible {
   outline-color: #ffcc81;
 }
